# JADMan

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  flake.nix  install.sh  start_jadman.sh
.github/workflows/: build-release.yml  release.yml
advanced/: README.md
advanced/cdm/: cdm_extractor.py
advanced/extension-hooks/: firefox_siphon_hook.js
crates/jadm-common/: Cargo.toml
crates/jadm-common/src/: lib.rs  protocol.rs  types.rs
crates/jadm-daemon/: Cargo.toml
crates/jadm-daemon/migrations/: 20260617000000_initial.sql  20260617000001_add_format.sql  20260618000000_add_live_support.sql  20260618000001_add_live_from_start.sql  20260618000002_add_compress_video.sql  20260629000000_add_playlist_and_referer.sql
crates/jadm-daemon/src/: config.rs  desktop.rs  main.rs  native_messaging.rs
crates/jadm-tui/: Cargo.toml
crates/jadm-tui/src/: app.rs  main.rs
docs/: ARCHITECTURE.md  advanced_bypass_roadmap.md  cookie_integration_plan.md  interception_architecture.md  jadman_feature_checklist.md  project_review.md  roadmap.md  sanity_check_plan.md
docs/features/: DAEMON.md  EXTENSION.md  TUI.md  WEBUI.md
extension/chrome/: background.js  content.js  grabber.js  manifest.json  menu.js  popup.html  popup.js  toolbox.js
extension/firefox/: background.js  content.js  grabber.html  grabber.js  manifest.json  menu.html  menu.js  popup.html  popup.js  siphon_hook.js  toolbox.html  toolbox.js
packaging/aur/jadman/: PKGBUILD
packaging/aur/jadman-git/: PKGBUILD
scripts/: download_camoufox.py
website/: index.html  script.js
(+35 files in other folders)
