[workspace]
resolver = "2"
members = [
    "crates/jadm-daemon",
    "crates/jadm-tui",
    "crates/jadm-common",
]

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
ratatui      = "0.26"
reqwest      = { version = "0.12", features = ["json"] }
axum         = "0.7"
tower-http   = { version = "0.5", features = ["cors"] }
tokio-stream = "0.1"
notify-rust  = "4"
which        = "6"
arboard      = "3"
syntect      = "5"
uuid         = { version = "1", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
toml         = "0.8"
anyhow       = "1.0"
regex        = "1.10"
dashmap      = "5.5"
crossterm    = "0.27"
libc         = "0.2"
directories  = "6.0"
sqlx         = { version = "0.8", features = [ "runtime-tokio", "sqlite", "chrono", "uuid" ] }
tempfile     = "3.10"
mockall      = "0.13"
async-trait  = "0.1"
socket2      = { version = "0.5", features = ["all"] }
bytes        = "1"

